--- a/package.json
+++ b/package.json
@@ -21,12 +21,19 @@
     "@google/genai": "^1.6.0",
     "@google/generative-ai": "^0.24.1",
     "@types/body-parser": "^1.19.6",
+    "@types/ffmpeg-static": "^5.1.0",
+    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/wav": "^1.0.4",
+    "@types/ws": "^8.18.1",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "types": "link:@/types",
-    "wav": "^1.0.2"
+    "wav": "^1.0.2",
+    "wavefile": "^11.0.0",
+    "ws": "^8.18.3"
   }
 }
